fix: forms ui on small devices

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -20,6 +20,15 @@ body {
   margin: 0;
 }
 
+p {
+  margin: 0;
+  margin-bottom: .25rem;
+}
+
+p:last-child {
+  margin-bottom: .5rem;
+}
+
 .flex-container {
   @include row;
   justify-content: space-between;
